Revision history for Web::ComposableRequest

0.3.1     2015-08-28 17:05:34
          - Added hashref inflation for body_params and query_params
          - Fixed left over undecoded keys error in Util decode_hash
          - Added badge markup

0.2.1     2015-08-23 23:17:18
          - Works with App::Doh
          - Monkey patch Role::Tiny until RT#106276 is fixed
          - Minimum test coverage
          - Passing author tests
          - Added main POD
          - Added Cookie and JSON roles
          - Updated prereqs
          - Passing initial 10test_script.t

0.1.1     2015-08-03 01:04:57
          - Added project files to master branch
