@@ -23,6 +23,10 @@ Module::Build     = 0.4004
 
 [Prereqs / BuildRequires]
 version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / TestRequires]
+version           = 0.88
 IO::String        = 1.08
 Module::Build     = 0.4004
 Test::Requires    = 0.06
