@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Better prereq data for build and test phases
+
 0.3.1     2015-08-28 17:05:34
           - Added hashref inflation for body_params and query_params
           - Fixed left over undecoded keys error in Util decode_hash
